--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "clsx": "2.1.1",
+    "markdown": "0.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "7.11.0"
+    "react-router": "7.11.0",
+    "vitest": "4.0.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
