--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.11.2",
     "clsx": "2.1.1",
     "markdown": "0.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "9.2.0",
     "react-router": "7.11.0",
     "vitest": "4.0.16"
   },
