--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,7 @@
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["src/shared/*"],
+      "@slices/*": ["src/store/slices/*"],
     },
   },
   "include": ["src"],
